@@ -341,16 +341,24 @@ Returns whether the repetition counting mode is enabled.
 
 \membersection{wxLog::SetTimestamp}\label{wxlogsettimestamp}
 
-\func{void}{SetTimestamp}{\param{const wxStrgin\&}{ format}}
+\func{static void}{SetTimestamp}{\param{const wxString\&}{ format}}
 
 Sets the timestamp format prepended by the default log targets to all
 messages. The string may contain any normal characters as well as \%
 prefixed format specificators, see {\it strftime()} manual for details.
-Passing a NULL value (not empty string) to this function disables message timestamping.
+Passing an empty string to this function disables message time stamping.
+
+\membersection{wxLog::DisableTimestamp}\label{wxlogdisabletimestamp}
+
+\func{void}{SetTimestamp}{\param{const wxString\&}{ format}}
+
+Disables time stamping of the log messages.
+
+\newsince{2.9}
 
 \membersection{wxLog::GetTimestamp}\label{wxloggettimestamp}
 
-\constfunc{const wxString\&}{GetTimestamp}{\void}
+\func{static const wxString\&}{GetTimestamp}{\void}
 
 Returns the current timestamp format string.
 
@@ -362,6 +370,8 @@ Sets the trace mask, see \helpref{Customization}{wxlogcustomization}
 section for details.
 
 \membersection{wxLog::GetTraceMask}\label{wxloggettracemask}
+
+\func{static wxTraceMask}{GetTraceMask}{\void}
 
 Returns the current trace mask, see \helpref{Customization}{wxlogcustomization} section
 for details.
